Fixed spacing in projects section, moved Contact section out of main

--- a/assets/style.css
+++ b/assets/style.css
@@ -31,6 +31,11 @@ main {
     background-color: rgb(183, 184, 185);
 }
 
+.about-me {
+    margin: 20px;
+    padding: 20px;
+}
+
 .about-me-title {
     display: flex;
     justify-content: end;
@@ -76,6 +81,25 @@ main {
     padding: 20px;
 }
 
+.contact-me {
+    margin-top: 20px;
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-bottom: 0;
+    padding: 20px;
+}
+
+.contact-me-title {
+    display: flex;
+    justify-content: end;
+    color: rgb(173, 68, 68);
+    margin-bottom: 20px;
+}
+
+.contact-me-content {
+    border-left: 5px solid rgb(173, 68, 68);
+    justify-content: space-evenly;
+}
 
 
 
